--- a/CargasNetClient/CargasNetClient.Android/CargasNetClient.Android.csproj
+++ b/CargasNetClient/CargasNetClient.Android/CargasNetClient.Android.csproj
@@ -264,5 +264,16 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\email.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\checked.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\fail.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadUnhandledDeviceExceptionCargasNetClientAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
