--- a/CargasNetClient/CargasNetClient/CargasNetClient.csproj
+++ b/CargasNetClient/CargasNetClient/CargasNetClient.csproj
@@ -23,5 +23,8 @@
     <EmbeddedResource Update="Views\MenuStadisticas.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\SoporteView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
