--- a/CargasNetClient/CargasNetClient.Android/Properties/AndroidManifest.xml
+++ b/CargasNetClient/CargasNetClient.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="3" android:versionName="1.0" package="com.companyname.cargasnetclient" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="3" android:versionName="1.2" package="com.companyname.cargasnetclient" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="28" />
-	<application android:label="CargaNet" android:icon="@drawable/SplashScreenLogo"></application>
+	<application android:label="CargaNet" android:icon="@drawable/Logo"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
