--- a/CargasNetClient/CargasNetClient/CargasNetClient.csproj
+++ b/CargasNetClient/CargasNetClient/CargasNetClient.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
