--- a/CargasNetClient/CargasNetClient.Android/CargasNetClient.Android.csproj
+++ b/CargasNetClient/CargasNetClient.Android/CargasNetClient.Android.csproj
@@ -69,6 +69,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileAccess.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="PhoneCaller.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
