--- a/CargasNetClient/CargasNetClient/CargasNetClient.csproj
+++ b/CargasNetClient/CargasNetClient/CargasNetClient.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ApiConsumer-2.0\ApiConsumer\ApiConsumer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Views\Confirmacion.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
